--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,23 +1,30 @@
-body {
+/* body {
     margin: 0;
     padding: 0;
-}
-.navbar-header {
+} */
+.navbar-header{
     background-color: #4aaaa5;
-    color: #ffffff;
     width: 500px;
+    height: 50px;
     text-align: center;
+    padding-top: 10px;
 }
 
-#aboutText {
-    margin-top: 100px;
-    margin-bottom: 50px;
+.navbar-header a {
+    color: white;
+    font-size: 24px;
+}
+
+#mainSection {
+    margin-top: 75px;
+    margin-bottom: 20px;
     border: 1px solid black;
 }
 
-/* img {
+.img-responsive {
     margin-left: 10px;
-} */
+    margin-bottom: 10px;
+}
 
 h3 {
     margin: 10px;
@@ -25,10 +32,23 @@ h3 {
     padding-bottom: 10px;
 }
 
+p {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 #sideBar {
     border: 1px solid black;
-    margin-top: 100px;
+    margin-top: 75px;
     height: 200px;
+}
+
+#msg {
+    height: 400px;
+}
+
+.btn {
+    margin-bottom: 50px;
 }
 
 #footer {
@@ -38,8 +58,9 @@ h3 {
     right: 0;
     background-color: grey;
     color: white;
-    text-align: center;
-    height: 20px;
+    padding-left: 50%;
+    padding-top: 5px;
+    height: 30px;
     border-top: 2px solid black;
 }
 
