--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,19 +11,28 @@
     color: white;
     font-size: 24px;
 }
+
 .sideBar {
     border: 1px solid black;
+    border-radius: 5px;
     margin-top: 75px;
     height: 200px;
     float: right;
 }
 
-/* Home Page Stylings */
-#mainSection {
+.mainSection {
     margin-top: 75px;
     margin-bottom: 20px;
     border: 1px solid black;
+    border-radius: 5px;
 }
+
+.navbar-right {
+    padding-right: 25px;
+}
+
+
+/* Home Page Stylings */
 
 .img-responsive {
     margin-left: 10px;
