--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,18 +3,27 @@ body {
     background: rgb(240, 240, 165);
 }
 
+.navbar {
+    padding: 0px;
+    background: rgb(218, 215, 215);
+}
+
 .navbar-header{
     background-color: #4aaaa5;
-    width: 500px;
-    height: 50px;
+    width: 250px;
+    /* height: 50px; */
     text-align: center;
-    padding-top: 10px;
+    /* padding-top: 10px; */
 }
 
 .navbar-header a {
     color: white;
     font-size: 24px;
 }
+
+/* .navbar-nav {
+    margin-left: auto !important;
+} */
 
 .sideBar {
     border: 1px solid black;
@@ -52,11 +61,6 @@ body {
     border-top: 2px solid black;
 }
 
-.img-responsive {
-    margin-bottom: 10px;
-    height: 150px;
-    width: 125px;
-}
 
 h3 {
     margin: 10px;
@@ -73,6 +77,12 @@ p {
 
 #about-me {
     background: white;
+}
+
+.img-responsive {
+    margin-bottom: 10px;
+    height: 150px;
+    width: 110px;
 }
 
 /* Portfolio Page Stylings */
